# meshcore-to-wdgwars

./: .gitignore  CHANGELOG.md  CI.md  README.md  SECURITY-FINDINGS.md  SECURITY.md  heimdall.py  pyproject.toml  requirements-dev.txt  requirements.txt  run.bat  run.sh  setup.bat  setup.sh  sonar-project.properties  update.bat  update.sh
.github/: pull_request_template.md
.github/workflows/: ci-quality-gates.yml  pages.yml  tests.yml
examples/: README.md  meshmapper-sections.csv  offline-pings.json  sample.csv
scripts/: check_readme_examples.py  smoke.sh
tests/: __init__.py  test_heimdall.py  test_scheduler.py  test_security.py  test_update_wrappers.py
web/: README.md  app.js  heimdall.py  index.html  serve.py
